# uno

./: .gitignore  CMakeLists.txt  README.md  Uno.slnx  test_online.sh  vcpkg.json
assets/ui/images/: basement_bg.aseprite  button1.aseprite  card.aseprite  card_icon.aseprite  menu_bg.aseprite  table.aseprite  wood_chair.aseprite  wood_chair_side.aseprite
assets/ui/rml/: debug_panel.rml  game_screen.rml  hello_world.rml  lobby.rml  main_menu.rml  settings.rml
assets/ui/styles/: rml.rcss
assets/ui/styles/pages/: debug-panel.rcss  game-screen.rcss  lobby.rcss  main-menu.rcss  settings.rcss
src/: card.hpp  clientmanager.cpp  clientmanager.hpp  filesystem.hpp  game.cpp  game.hpp  gamemanager.cpp  gamemanager.hpp  input.cpp  input.hpp  istatelistener.hpp  main.cpp  player.cpp  player.hpp  state_types.hpp  textengine.hpp
src/gamemodes/: classic.cpp  classic.hpp  igamemode.hpp
src/gui/: button.hpp  gui.cpp  gui.hpp  mainmenu.hpp  panel.cpp  panel.hpp
src/net/: net_client.cpp  net_client.hpp  net_common.hpp  net_manager.cpp  net_manager.hpp  net_packet_handler.cpp  net_packet_handler.hpp  net_server.cpp  net_server.hpp
src/proto/: net_message.proto
src/rmlui/: debug_panel.cpp  debug_panel.hpp  game_screen.cpp  game_screen.hpp  lobby.cpp  lobby.hpp  main_menu.cpp  main_menu.hpp  rmlui_file_interface.cpp  rmlui_file_interface.hpp  rmlui_platform_sdl.cpp  rmlui_platform_sdl.hpp  rmlui_renderer_gl3.cpp  rmlui_renderer_gl3_sdl.hpp  scene.hpp
